# Carinfo-Manager

./: .clang-format  .gitignore  CMakeLists.txt  HttpHandler.cpp.bak  HttpHandler.hpp.bak
config/: config.json
data/: account.json  car.json
include/: AccountPool.hpp  CarPool.hpp  Hash.hpp
include/carinfo-manager/: accountpool.hpp  base64.hpp  basicpool.hpp  carpool.hpp  hash.hpp  httphandler-client.hpp  httphandler-server.hpp  httphandler.hpp  log.hpp
qt-include/carinfo-manager/: add-account-window.hpp  add-car-window.hpp  change-password-window.hpp  client-window.hpp  display-accountinfo-window.hpp  display-carinfo-window.hpp  login-window.hpp  manage-account-window.hpp  manage-car-window.hpp  manage-window.hpp  qwidget-with-subwindows.hpp  remove-account-window.hpp  remove-car-window.hpp  search-account-window.hpp  search-car-window.hpp  select-server-window.hpp  update-account-window.hpp  update-car-window.hpp
qt-src/: add-account-window.cpp  add-car-window.cpp  change-password-window.cpp  client-window.cpp  display-account-window.cpp  display-carinfo-window.cpp  login-window.cpp  manage-account-window.cpp  manage-car-window.cpp  manage-window.cpp  qwidget-with-subwindows.cpp  remove-account-window.cpp  remove-car-window.cpp  search-account-window.cpp  search-car-window.cpp  select-server-window.cpp  update-account-window.cpp  update-car-window.cpp
server/: .gitignore  CMakeLists.txt
server/include/: AccountPool.hpp  BasicPool.hpp  CarPool.h  CarPool.hpp  Carinfo.hpp  Hash.hpp  hash.h
server/src/: AccountPool.cpp  CarPool.cpp  Carinfo.cpp  hash.cpp  server.cpp
server/test/: CMakeLists.txt  test_AccountPool.cc  test_CarPool  test_CarPool.cc  test_CarPool[1]_include.cmake  test_CarPool[1]_tests.cmake  test_Hash  test_Hash.cc  test_Hash[1]_include.cmake  test_Hash[1]_tests.cmake  test_std  test_std.cc  test_std[1]_include.cmake  test_std[1]_tests.cmake
server/test/googletest-1.14.0/: .gitignore
src/: AccountPool.cpp  CarPool.cpp  Hash.cpp  base64.cpp  client-main.cpp  client.cpp  httphandler-client.cpp  httphandler-server.cpp  httphandler.cpp  log.cpp  server-main.cpp  server.cpp
test/: CMakeLists.txt  test_AccountPool.cc  test_Base64.cc  test_CarPool.cc  test_Hash.cc  test_std.cc
